# assert

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Readme.md  library.json5  meson.build  package.json5  readme.md
.github/workflows/: ci.yml
include/qcx/: assert.hpp
include/qcx/assert/: config.hpp  handler.hpp  macros.hpp
include/qcx/assert/config/: assert_level.hpp  attributes.hpp  handler.hpp
include/qcx/assert/detail/: run_assert.hpp
src/: assert.test.cpp  config.assert_level.test.cpp  handler.test.cpp
subprojects/: catch2.wrap
test/: CMakeLists.txt  meson.build  run_tests.rb  test_fast.cpp  test_normal.cpp  test_safe.cpp
test/data/: debug.cpp  fast.cpp  main_abort.cpp  main_throw.cpp  meson.build  meson_options.txt  normal.cpp
tools/: clang-11.tc.json5  msvc.tc.json5
